--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [build-system]
-requires = ["setuptools", "wheel", "numpy>=1.19.0", "Cython>=0.29.21"]
+requires = ["setuptools>=68", "wheel", "numpy>=1.19.0", "Cython>=0.29.21"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "sklearn-quantile"
 description = "README.md"
-version = "0.0.26"
+version = "0.0.28"
 license = {file = "LICENSE"}
 authors = [
     {name="Jasper Roebroek", email = "roebroek.jasper@gmail.com"}
@@ -30,8 +30,12 @@ dependencies = [
 
 [project.optional-dependencies]
 documentation = ["matplotlib", "sphinx", "sphinx_rtd_theme", "numpydoc", "jupyter", "pandas"]
+
 test = ["pytest"]
-develop = ["matplotlib", "sphinx", "sphinx_rtd_theme", "numpydoc", "jupyter", "pandas", "pytest"]
+
+develop = ["pytest", "twine", "cython"]
+
+all = ["matplotlib", "sphinx", "sphinx_rtd_theme", "numpydoc", "jupyter", "pandas", "pytest", "twine", "cython"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
