--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Python package dependencies
-      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python -m pip install cython wheel setuptools
+      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python -m pip install cython wheel setuptools numpy>=1.22.3
 
     - name: Build binary wheel
       run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python setup.py bdist_wheel
@@ -49,7 +49,7 @@ jobs:
         architecture: x64
 
     - name: Install Python package dependencies
-      run: pip install cython wheel setuptools
+      run: pip install cython wheel setuptools numpy>=1.22.3
 
     - name: Build binary wheel
       run: python setup.py bdist_wheel
@@ -83,7 +83,7 @@ jobs:
         architecture: x64
 
     - name: Install Python package dependencies
-      run: pip install cython wheel setuptools
+      run: pip install cython wheel setuptools numpy>=1.22.3
 
     - name: Build binary wheel
       run: python setup.py bdist_wheel
