--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,95 +1,50 @@
 name: release
 
-on: push
+on:
+  push:
+    tags:  # trigger the deploy job on tag creation
+        - v*
 
-jobs:  
-  build-linux:
+jobs:
+  push:
+    uses: ./.github/workflows/push.yml  # use the callable tests job to run tests
+  release:
     runs-on: ubuntu-latest
-    container: quay.io/pypa/manylinux2014_x86_64
+    name: release
+    needs: [push]
     strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["8", "9", "10", "11"]
+        max-parallel: 1
+        matrix:
+          python-version: ["3.8", "3.9", "3.10", "3.11"]
+          os: ['windows', 'linux', 'macos']
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Python package dependencies
-      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python -m pip install cython wheel setuptools numpy>=1.22.3
-
-    - name: Build binary wheel
-      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python setup.py bdist_wheel
-
-    - name: Apply auditwheel for manylinux wheel
-      run: auditwheel repair -w dist dist/*
-
-    - name: Remove linux wheel
-      run: rm dist/*-linux_x86_64.whl
-
-    - name: Archive dist artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist-linux-3.${{ matrix.python-version }}
-        path: dist
-
-  build-macos:
-    runs-on: macos-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python ${{ matrix.python-version }} x64
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
+        python-version: 3.11
 
-    - name: Install Python package dependencies
-      run: pip install cython wheel setuptools numpy>=1.22.3
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install cython wheel setuptools numpy>=1.22.3
 
-    - name: Build binary wheel
-      run: python setup.py bdist_wheel
+    - name: Create source dist
+      run: python setup.py sdist
 
-    - name: Archive dist artifacts
-      uses: actions/upload-artifact@v2
+    - name: Stage ${{ matrix.os }} ${{ matrix.python-version }}
+      uses: actions/download-artifact@v2
       with:
-        name: dist-macos-${{ matrix.python-version }}
-        path: dist
+        name: dist-${{ matrix.os }}-${{ matrix.python-version }}
+    - run: mv -v dist-${{ matrix.os }}-${{ matrix.python-version }}/* dist/
 
-  build-windows:
-    runs-on: windows-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Download Build Tools for Visual Studio 2019
-      run: Invoke-WebRequest -Uri https://aka.ms/vs/16/release/vs_buildtools.exe -OutFile vs_buildtools.exe
-
-    - name: Run vs_buildtools.exe install
-      run: ./vs_buildtools.exe --quiet --wait --norestart --nocache --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 --add Microsoft.VisualStudio.Component.VC.v141.x86.x64 --add Microsoft.VisualStudio.Component.VC.140 --includeRecommended
-
-    - name: Set up Python ${{ matrix.python-version }} x64
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
-
-    - name: Install Python package dependencies
-      run: pip install cython wheel setuptools numpy>=1.22.3
-
-    - name: Build binary wheel
-      run: python setup.py bdist_wheel
-
-    - name: Archive dist artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: dist-windows-${{ matrix.python-version }}
-        path: dist
+    - name: Upload with twine
+      env:
+        TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
+        TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
+      run: |
+        ls -l dist/*
+        pip install twine
+        twine upload dist/*
