--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,8 @@ on:
 jobs:
   push:
     uses: ./.github/workflows/push.yml  # use the callable tests job to run tests
-  release:
+    
+  copy:
     runs-on: ubuntu-latest
     name: release
     needs: [push]
@@ -40,7 +41,14 @@ jobs:
         name: dist-${{ matrix.os }}-${{ matrix.python-version }}
     - run: mv -v dist-${{ matrix.os }}-${{ matrix.python-version }}/* dist/
 
-    - name: Upload with twine
+  upload:
+    runs-on: ubuntu-latest
+    name: release
+    needs: [copy]
+    
+    steps:
+      
+    - name: Upload
       env:
         TWINE_USERNAME: ${{ secrets.TWINE_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.TWINE_PASSWORD }}
