--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.11
+          python-version: 3.12
   
       - name: Install dependencies
         run: |
@@ -43,7 +43,7 @@ jobs:
     strategy:
         max-parallel: 4
         matrix:
-          python-version: ["3.8", "3.9", "3.10", "3.11"]
+          python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
           os: ['windows', 'linux', 'macos']
 
     steps:
