--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       run: rm dist/*-linux_x86_64.whl
 
     - name: Install locally
-      run: pip install .
+      run: python setup.py build_ext --inplace
 
     - name: Run tests
       run: pytest
@@ -66,7 +66,7 @@ jobs:
       run: python setup.py bdist_wheel
 
     - name: Install locally
-      run: pip install .
+      run: python setup.py build_ext --inplace
 
     - name: Run tests
       run: pytest
@@ -114,7 +114,7 @@ jobs:
       run: python setup.py bdist_wheel
 
     - name: Install locally
-      run: pip install .
+      run: python setup.py build_ext --inplace
 
     - name: Run tests
       run: pytest
