--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: build
 
 on: workflow_call
 
-jobs:  
+jobs:
   build-linux:
     runs-on: ubuntu-latest
     container: quay.io/pypa/manylinux2014_x86_64
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install Python package dependencies
-      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python -m pip install cython wheel setuptools numpy>=1.22.3 pytest twine
+      run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python -m pip install cython wheel setuptools numpy>=1.22.3 pytest twine scikit-learn
 
     - name: Build binary wheel
       run: /opt/python/cp3${{ matrix.python-version }}-cp3${{ matrix.python-version }}/bin/python setup.py bdist_wheel
@@ -60,7 +60,7 @@ jobs:
         architecture: x64
 
     - name: Install Python package dependencies
-      run: pip install cython wheel setuptools numpy>=1.22.3 pytest twine
+      run: pip install cython wheel setuptools numpy>=1.22.3 pytest twine scikit-learn
 
     - name: Build binary wheel
       run: python setup.py bdist_wheel
@@ -81,9 +81,6 @@ jobs:
       with:
         name: dist-macos-${{ matrix.python-version }}
         path: dist
-
-
-
 
   build-windows:
     runs-on: windows-latest
@@ -108,7 +105,7 @@ jobs:
         architecture: x64
 
     - name: Install Python package dependencies
-      run: pip install cython wheel setuptools numpy>=1.22.3 pytest twine
+      run: pip install cython wheel setuptools numpy>=1.22.3  scikit-learn
 
     - name: Build binary wheel
       run: python setup.py bdist_wheel
