--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,14 +19,10 @@ jobs:
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel==2.19.1
 
-      - name: Install dependencies
-        run: python -m pip install cython wheel setuptools numpy>=1.22.3
-
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+        env:
+          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.9"
 
       - uses: actions/upload-artifact@v4
         with:
