--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,3 +16,8 @@ sphinx:
 python:
    install:
    - requirements: docs/requirements.txt
+   - requirements: requirements.txt
+   - method: pip
+     path: .
+     extra_requirements:
+       - requirements.txt
