Fix bugs; (1) RandomForestMaximumRegressor only generating positive outputs, (2) weights not being taken into account in the KNN regressor, (3) weighted quantile calculations silently not accepting weights in certain conditions

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,15 +1,20 @@
 name: push
+description: Build and test on push
 
-on: 
+on:
   push:
     branches:
       - master
     paths-ignore:
       - README.md
-      - docs/**
+      - docs
       - .readthedocs.yaml
       - .gitignore
 
 jobs:
-  push:
-    uses: ./.github/workflows/build.yml  # use the callable tests job to run tests
+  test:
+    name: Run tests
+    uses: ./.github/workflows/test.yml
+  build:
+    name: Build wheels
+    uses: ./.github/workflows/build.yml
