--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,13 +2,18 @@ name: release
 
 on:
   push:
-    tags:  # trigger the deploy job on tag creation
-        - v*
+    tags: # trigger the deploy job on tag creation
+      - v*
   workflow_dispatch:
 
 jobs:
+  test:
+    name: Run tests
+    uses: ./.github/workflows/test.yml
+
   build:
-    uses: ./.github/workflows/build.yml  # use the callable tests job to run tests
+    name: Build wheels
+    uses: ./.github/workflows/build.yml
 
   build_sdist:
     name: Build source distribution
@@ -25,11 +30,12 @@ jobs:
           path: dist/*.tar.gz
 
   upload_pypi:
-    needs: [build, build_sdist]
+    name: Release
+    needs: [ test, build, build_sdist ]
     runs-on: ubuntu-latest
     environment:
       name: pypi
-      url: https://pypi.org/p/sklearn-quantile
+      url: https://pypi.org/project/sklearn-quantile
     permissions:
       id-token: write
 
