--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,30 +8,35 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-13, macos-14]
+        os: [ ubuntu-latest, windows-latest, macos-13, macos-14 ]
 
     steps:
       - uses: actions/checkout@v4
 
-      # Used to host cibuildwheel
-      - uses: actions/setup-python@v5
+      - name: Setup micromamba and install dependencies
+        uses: mamba-org/setup-micromamba@v2
+        with:
+          init-shell: bash
+          environment-name: sklearn-quantile-env
+          create-args: >-
+            python=3.10
 
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.19.1
+        shell: bash -l {0}
+        run: |
+          micromamba activate sklearn-quantile-env
+          python -m pip install cibuildwheel
 
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        shell: bash -l {0}
+        run: |
+          micromamba activate sklearn-quantile-env
+          python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.9"
+          CIBW_PROJECT_REQUIRES_PYTHON: ">=3.10"
           CIBW_SKIP: pp*
 
       - uses: actions/upload-artifact@v4
         with:
           name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: ./wheelhouse/*.whl
-
-      - name: Install requirements
-        run: python -m pip install -r requirements.txt
-
-      - name: Run tests
-        run: python -m pytest tests
